# personalized-research-intelligence-agent

./: .env.example  .gitignore  README.md  README_en.md  pyproject.toml  server_stderr.txt  server_stdout.txt
.claude/: settings.local.json
data/feedback/: default_user.json
data/profiles/: alice.json  default_user.json  zx.json
data/runs/: latest_analyses.json  latest_candidates.json  latest_decisions.json
data/samples/: content_items.json
docs/: architecture.md  roadmap.md
scripts/: init_pgvector.ps1  run_daily.ps1  serve_web.ps1  start_pgvector.ps1
src/research_intel/: __init__.py  assistant_context.py  cli.py  config.py  langgraph_pipeline.py  mcp_server.py  models.py  pipeline.py  scoring.py  storage.py  web_server.py
src/research_intel/agents/: __init__.py  base.py  discovery_agent.py  evidence_agent.py  filtering_agent.py  insight_generator.py  item_enricher.py  langgraph_assistant.py  llm_enhancer.py  profile_agent.py  recommendation_agent.py  repo_qa_agent.py  research_assistant_agent.py  trend_agent.py  value_analysis_agent.py  value_scorer.py
src/research_intel/connectors/: __init__.py  base.py  github.py  github_repo.py  http_client.py  huggingface.py  openalex.py  paper_sources.py  papers_with_code.py  semantic_scholar.py  signal_helpers.py
src/research_intel/evaluation/: __init__.py  assistant_eval.py
src/research_intel/llm/: __init__.py  client.py
src/research_intel/rag/: __init__.py  embedding.py  index.py  pgvector_store.py
src/research_intel/tools/: __init__.py  (+3 more)
tests/: test_assistant_context.py  test_pipeline.py  test_rag.py
(+3 files in other folders)
