[project]
name = "personalized-research-intelligence-agent"
version = "0.1.0"
description = "Personalized multi-agent research intelligence MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
research-intel = "research_intel.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

